Combining models now gives correct scores for whole dataset

--- a/combined_models.ipynb
+++ b/combined_models.ipynb
@@ -85,7 +85,7 @@
    "execution_count": 337,
    "outputs": [],
    "source": [
-    "train_data, test_data, train_labels, test_labels = train_data[:1000], test_data[:1000], train_labels[:1000], test_labels[:1000]"
+    "#train_data, test_data, train_labels, test_labels = train_data[:1000], test_data[:1000], train_labels[:1000], test_labels[:1000]"
    ],
    "metadata": {
     "collapsed": false,
@@ -790,13 +790,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 378,
    "outputs": [],
    "source": [
     "def getFinalPredictions(first_predictions, second_predictions):\n",
-    "    f_p_copy = first_predictions\n",
-    "    s_p_copy = second_predictions\n",
-    "    indices = s_p_copy.index[f_p_copy[\"predicted_as_anomaly\"] == True]\n",
+    "    f_p_copy = first_predictions.copy()\n",
+    "    s_p_copy = second_predictions.copy()\n",
+    "    indices = f_p_copy.index[f_p_copy[\"predicted_as_anomaly\"] == True]\n",
     "    s_p_copy.index = indices\n",
     "    f_p_copy.loc[indices, \"predicted_as_anomaly\"] = s_p_copy[\"predicted_as_anomaly\"]\n",
     "    print_results(f_p_copy)"
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 375,
    "outputs": [
     {
      "name": "stdout",
@@ -834,13 +834,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 376,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.55 s ± 231 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.66 s ± 576 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -855,20 +855,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 379,
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "boolean index did not match indexed array along dimension 0; dimension is 552 but corresponding boolean dimension is 1000",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[368], line 5\u001B[0m\n\u001B[1;32m      2\u001B[0m eif_predictions[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mis_normal\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m predicted_anomalous_labels\n\u001B[1;32m      4\u001B[0m \u001B[38;5;66;03m#print_results(eif_predictions)\u001B[39;00m\n\u001B[0;32m----> 5\u001B[0m \u001B[43mgetFinalPredictions\u001B[49m\u001B[43m(\u001B[49m\u001B[43mautoec_predictions\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43meif_predictions\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn[365], line 4\u001B[0m, in \u001B[0;36mgetFinalPredictions\u001B[0;34m(first_predictions, second_predictions)\u001B[0m\n\u001B[1;32m      2\u001B[0m f_p_copy \u001B[38;5;241m=\u001B[39m first_predictions\n\u001B[1;32m      3\u001B[0m s_p_copy \u001B[38;5;241m=\u001B[39m second_predictions\n\u001B[0;32m----> 4\u001B[0m indices \u001B[38;5;241m=\u001B[39m \u001B[43ms_p_copy\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mindex\u001B[49m\u001B[43m[\u001B[49m\u001B[43mf_p_copy\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mpredicted_as_anomaly\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m==\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;28;43;01mTrue\u001B[39;49;00m\u001B[43m]\u001B[49m\n\u001B[1;32m      5\u001B[0m s_p_copy\u001B[38;5;241m.\u001B[39mindex \u001B[38;5;241m=\u001B[39m indices\n\u001B[1;32m      6\u001B[0m f_p_copy\u001B[38;5;241m.\u001B[39mloc[indices, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpredicted_as_anomaly\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m s_p_copy[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mpredicted_as_anomaly\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n",
-      "File \u001B[0;32m~/Documents/GitHub/network-anomaly-detection/venv/lib/python3.8/site-packages/pandas/core/indexes/range.py:979\u001B[0m, in \u001B[0;36mRangeIndex.__getitem__\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m    972\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mIndexError\u001B[39;00m(\n\u001B[1;32m    973\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124monly integers, slices (`:`), \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    974\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mellipsis (`...`), numpy.newaxis (`None`) \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    975\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mand integer or boolean \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    976\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124marrays are valid indices\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m    977\u001B[0m     )\n\u001B[1;32m    978\u001B[0m \u001B[38;5;66;03m# fall back to Int64Index\u001B[39;00m\n\u001B[0;32m--> 979\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43msuper\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[38;5;21;43m__getitem__\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/Documents/GitHub/network-anomaly-detection/venv/lib/python3.8/site-packages/pandas/core/indexes/base.py:5339\u001B[0m, in \u001B[0;36mIndex.__getitem__\u001B[0;34m(self, key)\u001B[0m\n\u001B[1;32m   5336\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m   5337\u001B[0m         key \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39masarray(key, dtype\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mbool\u001B[39m)\n\u001B[0;32m-> 5339\u001B[0m result \u001B[38;5;241m=\u001B[39m \u001B[43mgetitem\u001B[49m\u001B[43m(\u001B[49m\u001B[43mkey\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   5340\u001B[0m \u001B[38;5;66;03m# Because we ruled out integer above, we always get an arraylike here\u001B[39;00m\n\u001B[1;32m   5341\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m result\u001B[38;5;241m.\u001B[39mndim \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m1\u001B[39m:\n",
-      "\u001B[0;31mIndexError\u001B[0m: boolean index did not match indexed array along dimension 0; dimension is 552 but corresponding boolean dimension is 1000"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true anomalies: 198\n",
+      "false anomalies: 80\n",
+      "false normals: 254\n",
+      "true normals: 468\n",
+      "precision: 0.7122302158273381\n",
+      "recall: 0.43805309734513276\n",
+      "f1-score: 0.5424657534246575\n"
      ]
     }
    ],
