AUROC evaluation, more and improved print functions
SCiForest still WIP

 Changes to be committed:
	modified:   .gitignore
	modified:   test_EIF.ipynb
	modified:   test_EIF_auto.ipynb
	modified:   test_FBIF.ipynb
	modified:   test_FBIF_auto.ipynb
	modified:   test_IF_auto.ipynb
	modified:   test_IsolationForest.ipynb
	modified:   test_SCiF.ipynb
	modified:   test_SCiF_auto.ipynb
	modified:   turtleIsolationForests/FBIF.py
	modified:   turtleIsolationForests/isolationForest.py
	modified:   turtleIsolationForests/preprocessFeatures.py
	modified:   turtleIsolationForests/printResults.py

--- a/test_EIF_auto.ipynb
+++ b/test_EIF_auto.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "from turtleIsolationForests.extendedIsolationForest import ExtendedIsolationForest\n",
-    "from turtleIsolationForests.printResults import print_results\n",
+    "from turtleIsolationForests.printResults import notebook_visual_printout, csv_printout\n",
     "from turtleIsolationForests.preprocessFeatures import preprocess_features"
    ]
   },
@@ -20,15 +20,6 @@
    "source": [
     "train_dataframe = pd.read_csv(\"./eda_simple_classification/network_data_mod_train.csv\", index_col=0)\n",
     "test_dataframe = pd.read_csv(\"./eda_simple_classification/network_data_mod_test.csv\", index_col=0)\n",
-    "test_dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "X_train, X_test, train_labels, test_labels = preprocess_features(train_dataframe, test_dataframe)"
    ]
   },
@@ -39,42 +30,16 @@
    "outputs": [],
    "source": [
     "model = ExtendedIsolationForest(random_state = None)\n",
-    "model.fit(X_train, train_labels)\n",
-    "print(\"Threshold: \" + str(model.threshold))\n",
-    "print(\"\\nTraining set results:\")\n",
-    "train_predictions = model.train_scores\n",
-    "train_predictions['is_normal'] = train_labels\n",
-    "print_results(train_predictions)\n",
-    "print(\"\\nTest set results:\")\n",
-    "predictions = automodel.predict(X_test)\n",
-    "predictions['is_normal'] = test_labels\n",
-    "print_results(predictions)\n",
-    "print(\"\\n\")"
+    "#notebook_visual_printout(X_train, X_test, train_labels, test_labels, model)\n",
+    "csv_printout(20, X_train, X_test, train_labels, test_labels, model)"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "best auto-thresholded f1 so far: 0.723\n",
-    "\n",
-    "Threshold: 0.39441573426143955\n",
-    "\n",
-    "true anomalies: 10925\n",
-    "\n",
-    "false anomalies: 1908\n",
-    "\n",
-    "false normals: 7845\n",
-    "\n",
-    "true normals: 1866\n",
-    "\n",
-    "precision: 0.8513208135276241\n",
-    "\n",
-    "recall: 0.5820458177943527\n",
-    "\n",
-    "f1-score: 0.691390057905895"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
