--- a/test_IF_auto.ipynb
+++ b/test_IF_auto.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "from turtleIsolationForests.isolationForest import IsolationForest\n",
     "from turtleIsolationForests.preprocessFeatures import preprocess_features\n",
-    "from turtleIsolationForests.printResults import print_results"
+    "from turtleIsolationForests.printResults import notebook_visual_printout, csv_printout"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "source": [
     "train_dataframe = pd.read_csv(\"./eda_simple_classification/network_data_mod_train.csv\", index_col=0)\n",
     "test_dataframe = pd.read_csv(\"./eda_simple_classification/network_data_mod_test.csv\", index_col=0)\n",
-    "train_dataframe"
+    "X_train, X_test, train_labels, test_labels = preprocess_features(train_dataframe, test_dataframe)"
    ]
   },
   {
@@ -29,47 +29,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, train_labels, test_labels = preprocess_features(train_dataframe, test_dataframe)\n",
     "model = IsolationForest(random_state = None)\n",
-    "model.fit(X_train, train_labels)\n",
-    "print(\"Threshold: \" + str(model.threshold))\n",
-    "print(\"\\nTraining set results:\")\n",
-    "train_predictions = model.train_scores\n",
-    "train_predictions['is_normal'] = train_labels\n",
-    "print_results(train_predictions)\n",
-    "print(\"\\nTest set results:\")\n",
-    "predictions = automodel.predict(X_test)\n",
-    "predictions['is_normal'] = test_labels\n",
-    "print_results(predictions)\n",
-    "print(\"\\n\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Best auto f1 so far: 0.616"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, train_labels, test_labels = minmax_preprocess_features(train_dataframe, test_dataframe)\n",
-    "model = IsolationForest(random_state = None)\n",
-    "model.fit(X_train, train_labels)\n",
-    "print(\"Threshold: \" + str(model.threshold))\n",
-    "print(\"\\nTraining set results:\")\n",
-    "train_predictions = model.train_scores\n",
-    "train_predictions['is_normal'] = train_labels\n",
-    "print_results(train_predictions)\n",
-    "print(\"\\nTest set results:\")\n",
-    "predictions = automodel.predict(X_test)\n",
-    "predictions['is_normal'] = test_labels\n",
-    "print_results(predictions)"
+    "#notebook_visual_printout(X_train, X_test, train_labels, test_labels, model)\n",
+    "csv_printout(20, X_train, X_test, train_labels, test_labels, model)"
    ]
   },
   {
