--- a/test_EIF.ipynb
+++ b/test_EIF.ipynb
@@ -12,7 +12,7 @@
    "source": [
     "import pandas as pd\n",
     "from turtleIsolationForests.extendedIsolationForest import ExtendedIsolationForest\n",
-    "from turtleIsolationForests.printResults import print_results\n",
+    "from turtleIsolationForests.printResults import notebook_visual_printout, csv_printout\n",
     "from turtleIsolationForests.preprocessFeatures import preprocess_features"
    ]
   },
@@ -28,32 +28,7 @@
    "source": [
     "train_dataframe = pd.read_csv(\"./eda_simple_classification/network_data_mod_train.csv\", index_col=0)\n",
     "test_dataframe = pd.read_csv(\"./eda_simple_classification/network_data_mod_test.csv\", index_col=0)\n",
-    "test_dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "X_train, X_test, train_labels, test_labels = preprocess_features(train_dataframe, test_dataframe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "X_train, X_test, train_labels, test_labels = preprocess_features(train_dataframe, test_dataframe)\n",
     "contamination = sum(train_labels == 0) / len(train_labels)\n",
     "contamination"
    ]
@@ -65,29 +40,8 @@
    "outputs": [],
    "source": [
     "model = ExtendedIsolationForest(contamination = contamination, random_state = None)\n",
-    "model.fit(X_train, train_labels)\n",
-    "print(\"Threshold: \" + str(model.threshold))\n",
-    "print(\"\\nTraining set results:\")\n",
-    "train_predictions = model.train_scores\n",
-    "train_predictions['is_normal'] = train_labels\n",
-    "print_results(train_predictions)\n",
-    "print(\"\\nTest set results:\")\n",
-    "predictions = automodel.predict(X_test)\n",
-    "predictions['is_normal'] = test_labels\n",
-    "print_results(predictions)\n",
-    "print(\"\\n\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "best f1 so far: .653"
+    "#notebook_visual_printout(X_train, X_test, train_labels, test_labels, model)\n",
+    "csv_printout(20, X_train, X_test, train_labels, test_labels, model)"
    ]
   },
   {
