--- a/autoencoder_classifier.ipynb
+++ b/autoencoder_classifier.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nframes = [train_data, test_data]\\n\\ndataframe  = pd.concat(frames)\\nraw_data = dataframe.values\\n#dataframe.head()\\n#raw_data\\n\\n\\n# The last element contains the labels\\nlabels = raw_data[:, -1]\\n\\n#print(test_data.columns )\\n\\ndata = raw_data[:, 0:-1]\\n#print(data)\\n\\n\\ntrain_data, test_data, train_labels, test_labels = train_test_split(\\n    data, labels, test_size=0.2, random_state=34\\n)\\n\\n\\nmin_val = tf.reduce_min(train_data)\\nmax_val = tf.reduce_max(train_data)\\n\\ntrain_data = (train_data - min_val) / (max_val - min_val)\\ntest_data = (test_data - min_val) / (max_val - min_val)\\n\\ntrain_data = tf.cast(train_data, tf.float32)\\ntest_data = tf.cast(test_data, tf.float32)\\n\\ntrain_labels = train_labels.astype(bool)\\ntest_labels = test_labels.astype(bool)\\n\\nnormal_train_data = train_data[train_labels]\\nnormal_test_data = test_data[test_labels]\\n\\nanomalous_train_data = train_data[~train_labels]\\nanomalous_test_data = test_data[~test_labels]\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -15,44 +26,16 @@
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras import layers, losses\n",
     "from tensorflow.keras.datasets import fashion_mnist\n",
-    "from tensorflow.keras.models import Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "train_data = pd.read_csv('eda_simple_classification/network_data_mod_train.csv')\n",
-    "test_data = pd.read_csv('eda_simple_classification/network_data_mod_test.csv')\n",
+    "from tensorflow.keras.models import Model\n",
     "\n",
+    "\n",
+    "\"\"\"\n",
     "frames = [train_data, test_data]\n",
     "\n",
     "dataframe  = pd.concat(frames)\n",
     "raw_data = dataframe.values\n",
     "#dataframe.head()\n",
     "#raw_data\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "dataframe = dataframe.sample(frac=1).reset_index(drop=True)\n",
-    "train_data = dataframe.sample(frac = 0.8)\n",
-    "train_data = train_data[train_data[\"class\"] != 0]\n",
-    "test_data = dataframe.drop(train_data.index)\n",
-    "\"\"\"\n",
-    "\n",
     "\n",
     "\n",
     "# The last element contains the labels\n",
@@ -64,17 +47,49 @@
     "#print(data)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "train_data, test_data, train_labels, test_labels = train_test_split(\n",
     "    data, labels, test_size=0.2, random_state=34\n",
     ")\n",
-    "\n"
+    "\n",
+    "\n",
+    "min_val = tf.reduce_min(train_data)\n",
+    "max_val = tf.reduce_max(train_data)\n",
+    "\n",
+    "train_data = (train_data - min_val) / (max_val - min_val)\n",
+    "test_data = (test_data - min_val) / (max_val - min_val)\n",
+    "\n",
+    "train_data = tf.cast(train_data, tf.float32)\n",
+    "test_data = tf.cast(test_data, tf.float32)\n",
+    "\n",
+    "train_labels = train_labels.astype(bool)\n",
+    "test_labels = test_labels.astype(bool)\n",
+    "\n",
+    "normal_train_data = train_data[train_labels]\n",
+    "normal_test_data = test_data[test_labels]\n",
+    "\n",
+    "anomalous_train_data = train_data[~train_labels]\n",
+    "anomalous_test_data = test_data[~test_labels]\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train_data = pd.read_csv('eda_simple_classification/network_data_mod_train.csv')\n",
+    "test_data = pd.read_csv('eda_simple_classification/network_data_mod_test.csv')\n",
+    "\n",
+    "train_data = train_data.values\n",
+    "test_data = test_data.values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -100,39 +115,34 @@
     {
      "data": {
       "text/plain": [
-       "array([1., 1., 0., ..., 0., 1., 1.])"
+       "<tf.Tensor: shape=(125973, 48), dtype=float32, numpy=\n",
+       "array([[0.0000000e+00, 0.0000000e+00, 0.0000000e+00, ..., 3.9691361e-07,\n",
+       "        0.0000000e+00, 7.9382717e-06],\n",
+       "       [7.9382717e-06, 0.0000000e+00, 0.0000000e+00, ..., 0.0000000e+00,\n",
+       "        0.0000000e+00, 7.9382717e-06],\n",
+       "       [1.5876543e-05, 0.0000000e+00, 0.0000000e+00, ..., 0.0000000e+00,\n",
+       "        0.0000000e+00, 0.0000000e+00],\n",
+       "       ...,\n",
+       "       [9.9998415e-01, 0.0000000e+00, 0.0000000e+00, ..., 7.9382723e-08,\n",
+       "        0.0000000e+00, 7.9382717e-06],\n",
+       "       [9.9999207e-01, 0.0000000e+00, 0.0000000e+00, ..., 0.0000000e+00,\n",
+       "        0.0000000e+00, 0.0000000e+00],\n",
+       "       [1.0000000e+00, 0.0000000e+00, 0.0000000e+00, ..., 0.0000000e+00,\n",
+       "        0.0000000e+00, 7.9382717e-06]], dtype=float32)>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_labels"
+    "train_data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "train_labels = train_labels.astype(bool)\n",
-    "test_labels = test_labels.astype(bool)\n",
-    "\n",
-    "normal_train_data = train_data[train_labels]\n",
-    "normal_test_data = test_data[test_labels]\n",
-    "\n",
-    "anomalous_train_data = train_data[~train_labels]\n",
-    "anomalous_test_data = test_data[~test_labels]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -149,12 +159,12 @@
     }
    ],
    "source": [
-    "normal_train_data.shape"
+    "normal_train_data.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -179,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -10265,7 +10275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -10299,7 +10309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -10328,7 +10338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -10357,7 +10367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10389,7 +10399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10416,7 +10426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10443,7 +10453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10476,7 +10486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10494,7 +10504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10511,7 +10521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10525,13 +10535,14 @@
     }
    ],
    "source": [
+    "\n",
     "preds = predict(autoencoder, test_data, threshold)\n",
     "print_stats(preds, test_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -10554,7 +10565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -10573,7 +10584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
