--- a/autoencoder_eda_preprocessing.ipynb
+++ b/autoencoder_eda_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -31,9 +31,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_7924\\1079074154.py:11: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
+      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_8512\\1079074154.py:11: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
       "  df = pd.read_csv(data_loc + a1, names=data, index_col=False)\n",
-      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_7924\\1079074154.py:12: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
+      "C:\\Users\\alexa\\AppData\\Local\\Temp\\ipykernel_8512\\1079074154.py:12: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
       "  df_test = pd.read_csv(data_loc + a2, names=data, index_col=False)\n"
      ]
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -458,7 +458,7 @@
        "[148517 rows x 42 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -747,7 +747,7 @@
        "[125973 rows x 11 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -771,12 +771,13 @@
        "\"\\nnetwork_data_mod['class'].mask(network_data_mod['class'] == 'normal', 1, inplace=True)\\nnetwork_data_mod['class'].mask(network_data_mod['class'] == 'normal', 0, inplace=False)\\nnetwork_data_mod_test['class'].mask(network_data_mod_test['class'] == 'normal', 1, inplace=True)\\nnetwork_data_mod_test['class'].mask(network_data_mod_test['class'] == 'normal', 0, inplace=False)\\n\""
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#1, 0 was chaged to 0, 1 from 3/5/23\n",
     "network_data_mod[\"class\"] = np.where(network_data_mod[\"class\"] == \"normal\", 1, 0)\n",
     "network_data_mod_test[\"class\"] = np.where(network_data_mod_test[\"class\"] == \"normal\", 1, 0)\n",
     "\"\"\"\n",
@@ -789,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1192,7 +1193,7 @@
        "[125973 rows x 47 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
